--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
    - pip install coveralls
    - pip install -r requirements.txt
 script:
-  - coverage run -m unittest discover -s tests
+  - coverage run --source=home src/manage.py test dummy
 after_success:
   - coveralls --verbose
 
