--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,6 @@ before_install:
    - pip install -r requirements.txt
 script:
   - python src/manage.py test dummy
-  - coverage run --source=home src/manage.py test dummy
+  - coverage run src/manage.py test dummy
 after_success:
   - coveralls --verbose
-
