Modified .travis.yml and moved .coveragerc

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,9 @@ before_install:
 before_script:
 - echo '' > /tmp/plantalytics_backend.log
 - printf '\n' > /tmp/plantalytics_backend.log
-script:
+- pwd
 - cd src
+script:
 - python manage.py test
 - coverage run manage.py test
 after_script:
